# cornflakes

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  commands.sh  cycles.sh  example_config.yaml  install.sh  twitter_mmtstudy.sh
cf-kv/: Cargo.toml  build.rs  cdn.yaml  google.yaml  retwis.yaml  twitter.yaml  ycsb-ice.yaml  ycsb.yaml
cf-kv/c/: Makefile
cf-kv/src/: '  \  cdn.rs  google_protobuf.rs  lib.rs  retwis.rs  retwis_run_datapath.rs  run_cdn.rs  run_google_protobuf.rs  run_twitter.rs  twitter.rs  ycsb.rs  ycsb_run_datapath.rs
cf-kv/src/capnproto/: cf_kv.capnp  mod.rs
cf-kv/src/cornflakes_dynamic/: kv.proto  kv_c.proto  kv_hybrid.proto  kv_hybrid_arena_object.proto  kv_hybrid_object.proto  kv_nonrefcounted.proto  kv_nonrefcounted_c.proto  mod.rs
cf-kv/src/flatbuffers/: cf_kv_fb.fbs  mod.rs
cf-kv/src/protobuf/: kv_protobuf.proto  mod.rs
cf-kv/src/redis/: mod.rs
cornflakes-codegen/: Cargo.toml
cornflakes-codegen/src/: header_utils.rs  lib.rs
cornflakes-codegen/src/c_codegen/: common.rs  hybridarenaobject.rs  hybridrcsga.rs  mlx5_datapath.rs  mod.rs  rcsga.rs  sga.rs
cornflakes-codegen/src/rust_codegen/: constant_codegen.rs  hybridarenaobject.rs  hybridobject.rs  hybridrcsga.rs  linear_codegen.rs  linear_codegen_rc.rs  mod.rs  rcsga.rs  sga.rs
cornflakes-codegen/src/utils/: dynamic_hdr.rs  dynamic_rcsga_hdr.rs  dynamic_sga_hdr.rs  fixed_hdr.rs  mod.rs  rc_dynamic_hdr.rs
cornflakes-libos/: Cargo.toml  build-dpdk.sh  build.rs
cornflakes-libos/src/: allocator.rs  client_threads.rs  datapath.rs  dynamic_object_arena_hdr.rs  dynamic_object_hdr.rs  dynamic_rcsga_hdr.rs  dynamic_rcsga_hybrid_hdr.rs  dynamic_sga_hdr.rs  lib.rs  mem.rs  serialize.rs  timing.rs  utils.rs
cornflakes-libos/src/dpdk_bindings/: inlined.c  mod.rs
cornflakes-libos/src/dpdk_libos/: allocator.rs  connection.rs  dpdk_utils.rs  echo.rs  fast_echo.rs  mod.rs  wrapper.rs
cornflakes-libos/src/loadgen/: .request_schedule.rs.swm  .request_schedule.rs.swn  client_threads.rs  mod.rs  request_schedule.rs
cornflakes-libos/src/native_include/: dpdk-headers.h
cornflakes-libos/src/state_machine/: client.rs  server.rs
cornflakes-utils/: Cargo.toml
cornflakes-utils/src/: lib.rs
dpdk-datapath/: Cargo.toml  build.rs
dpdk-datapath/src/: lib.rs
dpdk-datapath/src/datapath/: allocator.rs  connection.rs  echo.rs  fast_echo.rs  mod.rs  wrapper.rs
dpdk-datapath/src/datapath2/: allocator.rs  connection.rs  echo.rs  fast_echo.rs  mod.rs  wrapper.rs
dpdk-datapath/src/dpdk_bindings/: custom_mempool.h  dpdk-headers.h  inlined.c  mem.h  mod.rs
ds-echo/: Cargo.toml  build.rs  experiment.yaml
ds-echo/c/: Makefile  server.c
ds-echo/src/: :w  client.rs  lib.rs  run_datapath.rs  server.rs
ds-echo/src/capnproto/: mod.rs
ds-echo/src/cornflakes_dynamic/: echo_dynamic_hybrid.proto  echo_dynamic_hybrid_object.proto  echo_dynamic_hybrid_object_arena.proto  echo_dynamic_rcsga.proto  mod.rs
ds-echo/src/echo/: mod.rs
ds-echo/src/flatbuffers/: mod.rs
ds-echo/src/protobuf/: mod.rs
echo-dynamic-sga-c/: Cargo.toml  build.rs  echo_dynamic_sga.h
echo-dynamic-sga-c/src/: echo_dynamic_sga.proto  lib.rs
echo-server/: Cargo.toml  build.rs  experiment.yaml
echo-server/src/: client.rs  lib.rs  server.rs
echo-server/src/baselines/: mod.rs
echo-server/src/capnproto/: echo.capnp  mod.rs
echo-server/src/cereal/: cereal_classes.cc  mod.rs
echo-server/src/cereal/include/: cereal_headers.hh
echo-server/src/cornflakes/: cf_testobject1.rs  cf_testobject2.rs  cf_utils.rs  cf_utils1.rs  echo_cf.proto  mod.rs  serialize_test.rs
echo-server/src/cornflakes_dynamic/: cf_testobject1.rs  cf_testobject2.rs  echo_cf_dynamic_rc.proto  mod.rs
echo-server/src/cornflakes_fixed/: echo_cf_fixed.proto  mod.rs
echo-server/src/flatbuffers/: echo_fb.fbs  mod.rs
echo-server/src/protobuf/: echo_proto.proto  mod.rs
kv-store/: Cargo.toml  build.rs  experiment.yaml
kv-store-ds/: Cargo.toml  build.rs  experiment.yaml
kv-store-ds/src/: lib.rs  ycsb_parser.rs
kv-store-ds/src/capnproto/: kv.capnp  mod.rs
kv-store-ds/src/cornflakes_dynamic/: hardcoded_cf.rs  kv_cf_dynamic.proto  mod.rs
kv-store-ds/src/flatbuffers/: kv_fb.fbs  mod.rs
kv-store-ds/src/protobuf/: kv_proto.proto  mod.rs
kv-store/src/: .lib.rs.swl  .lib.rs.swm  .lib.rs.swn  .twitter_parser.rs.swn  lib.rs  twitter_parser.rs  ycsb_parser.rs
kv-store/src/capnproto/: kv.capnp  mod.rs
kv-store/src/cereal/: cereal_classes.cc  mod.rs
kv-store/src/cereal/include/: cereal_headers.hh
kv-store/src/cornflakes_dynamic/: hardcoded_cf.rs  kv_cf_dynamic.proto  mod.rs
kv-store/src/flatbuffers/: kv_fb.fbs  mod.rs
kv-store/src/protobuf/: kv_proto.proto  mod.rs
linux-datapath-c/: Cargo.toml  build.rs  linux_datapath.h
linux-datapath-c/src/: lib.rs
mlx5-datapath/: Cargo.toml  build.rs
mlx5-datapath-c/: Cargo.toml  build.rs  mlx5_datapath.h  mlx5_datapath_cpp.h
mlx5-datapath-c/src/: lib.rs
mlx5-datapath/mlx5-wrapper/: Makefile  init_submodules.sh
mlx5-datapath/mlx5-wrapper/inc/base/: debug.h  mbuf.h  mem.h  mempool.h  pci.h  rte_memcpy.h  stddef.h  time.h
mlx5-datapath/mlx5-wrapper/inc/mlx5/: mlx5.h  mlx5_init.h  mlx5_runtime.h
mlx5-datapath/mlx5-wrapper/inc/net/: ethernet.h  (+1 more)
mlx5-datapath/mlx5-wrapper/src/: init.c  mbuf.c  mem.c  mempool.c  runtime.c  time.c
mlx5-datapath/src/: lib.rs
mlx5-datapath/src/datapath/: allocator.rs  connection.rs  mod.rs  sizes.rs  wrapper.rs
mlx5-datapath/src/mlx5_bindings/: inlined.c  mlx5-headers.h  mod.rs
mlx5-datapath/src/simple_echo/: client.rs  mod.rs  server.rs
redis-common/: Cargo.toml
redis-common/src/: lib.rs
redis-dpdk/: Cargo.toml
redis-dpdk/src/: lib.rs
sg-bench-client/: Cargo.toml  run-client.sh
sg-bench-client/src/: lib.rs  run_datapath.rs
simple-echo/: Cargo.toml
simple-echo/src/: client.rs  lib.rs  run_datapath.rs  server.rs
tapir/: Cargo.toml  build.rs  tapir_serialized_cpp.h
tapir-client/: Cargo.toml
tapir-client/src/: lib.rs
tapir/src/: lib.rs
tapir/src/cf_dynamic/: mod.rs  tapir_proto.proto
timetrace/: Cargo.toml
timetrace/src/: lib.rs
(+167 files in other folders)
