[workspace]

members = ["cornflakes-codegen",
            "cornflakes-libos",
            "echo-server",
            "cornflakes-utils",
            "data-structure-query",
            "ds-echo",
            #"echo-dynamic-sga-c",
            "cf-kv",
            #"kv-store",
            "mlx5-datapath",
            "mlx5-datapath-c",
            "linux-datapath",
            "linux-datapath-c",
            "dpdk-datapath",
            #"kv-store-ds",
            "redis-dpdk",
            "redis-common",
            "redis-mlx5",
            "simple-echo"]
            #"data-shuffle"]

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
#incremental = false
rpath = false

