[workspace]

members = ["cornflakes-codegen",
            "cornflakes-libos",
            "cornflakes-utils",
            "ds-echo",
            #"echo-dynamic-sga-c",
            "cf-kv",
            "mlx5-datapath",
            "mlx5-datapath-c",
            "linux-datapath",
            "linux-datapath-c",
            "dpdk-datapath",
            "sg-bench-client",
            "simple-echo"]
            #"data-shuffle"]

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
#incremental = false
rpath = false

