[package]
name = "cf-kv"
version = "0.1.0"
authors = ["deeptir <deeptir@cs.stanford.edu>"]
edition = "2021"

[dependencies]
color-eyre = "0.5"
tracing = "*"
tracing-subscriber = "0.2.17"
structopt="0.2.16"
structopt-derive="0.2.16"
cornflakes-libos = { path = "../cornflakes-libos" }
cornflakes-utils = { path = "../cornflakes-utils" }
cornflakes-codegen = { path = "../cornflakes-codegen" }
mlx5-datapath = { path = "../mlx5-datapath", optional = true }
dpdk-datapath = { path = "../dpdk-datapath", optional = true }
ice-datapath = { path = "../ice-datapath", optional = true }
ctrlc = "3.1.7"
memmap = "0.7.0"
byteorder = "1.3.4"
bytes = "1.0.1"
libc = "0.2.81"
capnp = { version = "0.13.6", features = ["unaligned"] }
flatbuffers = "2.1.2"
protobuf = "3.0.3"
hashbrown = "0.11.*"
affinity = "0.1.2"
cxx = "1.0"
demikernel = {git = "https://github.com/deeptir18/demikernel", branch = "perftools_public", version = "1", features = ["profiler"], optional = true}
rand = "0.8.*"
bitmaps = "3.2.0"
bumpalo = { git = "https://github.com/deeptir18/bumpalo", features = ["collections"] }
redis = "0.21.5"
zipf = "7.0.0"

[build-dependencies]
protobuf-codegen = "3.0.3"
capnpc = "0.13"
cornflakes-codegen = { path = "../cornflakes-codegen" }
cxx-build = "1.0"

[dev-dependencies]
libc = "0.2.81"
tracing-error = "*"
cornflakes-utils = { path = "../cornflakes-utils" }

[features]
default = []
dpdk = ["dpdk-datapath"]
ice = ["ice-datapath"]
mlx5 = ["dpdk-datapath/mlx5", "mlx5-datapath", "dpdk-datapath", "mlx5-datapath/mlx5"]
profiler = ["cornflakes-libos/profiler", "demikernel", "dpdk-datapath/profiler", "mlx5-datapath/profiler"]

[[bin]]
name = "ycsb_dpdk"
required-features = ["dpdk"]

[[bin]]
name = "ycsb_mlx5"
required-features = ["mlx5"]

[[bin]]
name = "ycsb_ice"
required-features = ["ice"]

[[bin]]
name = "retwis_dpdk"
required-features = ["dpdk"]

[[bin]]
name = "retwis_mlx5"
required-features = ["mlx5"]

[[bin]]
name = "retwis_ice"
required-features = ["ice"]

