[package]
name = "cornflakes-codegen"
version = "0.1.0"
authors = ["deeptir <deeptir@cs.stanford.edu>"]
edition = "2018"

[dependencies]
structopt="0.2.16"
structopt-derive="0.2.16"
tracing = "0.1.12"
tracing-subscriber = "0.1.6"
color-eyre = "0.5"
protobuf-parser = "0.1.3"
which = "4.1.0"
cornflakes-utils = { path = "../cornflakes-utils" }

