[package]
name = "cornflakes-codegen"
version = "0.1.0"
authors = ["deeptir <deeptir@cs.stanford.edu>"]
edition = "2021"

[dependencies]
structopt="0.2.16"
structopt-derive="0.2.16"
tracing = "0.1.12"
tracing-subscriber = "0.2.17"
color-eyre = "0.5"
protobuf-parser = { path = "../protobuf-parser" }
which = "4.1.0"
byteorder = "1.3.4"
bytes = "1.0.1"
cornflakes-utils = { path = "../cornflakes-utils" }
cornflakes-libos = { path = "../cornflakes-libos" }
perftools = {git = "https://github.com/demikernel/perftools", rev = "3f3f11b", optional = true}
bitmaps = "3.2.0"
ffiber = { git = "https://github.com/ygina/ffiber", rev = "66116bf" }

[dev-dependencies]
libc = "0.2.81"
tracing-error = "*"
cornflakes-utils = { path = "../cornflakes-utils" }

[features]
default = []
profiler = ["cornflakes-libos/profiler", "perftools"]

