[package]
name = "cornflakes-libos"
version = "0.1.0"
authors = ["deeptir <deeptir@cs.stanford.edu>"]
edition = "2018"

[build-dependencies]
bindgen = "0.55.1" 
cc = "1.0.63"

[dependencies]
color-eyre = "0.5"
tracing = "*"
tracing-subscriber = "0.2.17"
structopt="0.2.16"
structopt-derive="0.2.16"
yaml-rust = "0.4.3"
hashbrown = "0.9.1"
eui48 = "1.0.1"
byteorder = "1.3.4"
hdrhistogram = "7.2.0"
ctrlc = "3.1.7"
bytes = "0.4.12"
cornflakes-utils = { path = "../cornflakes-utils" }

[dev-dependencies]
libc = "0.2.81"
tracing-error = "*"
rand = "0.7.3"

[features]
default = ["mlx5"]
mlx5 = []
timers = []
