[package]
name = "cornflakes-libos"
version = "0.1.0"
authors = ["deeptir <deeptir@cs.stanford.edu>"]
edition = "2018"

[build-dependencies]
bindgen = "0.55.1" 
cc = "1.0.63"

[dependencies]
color-eyre = "0.5"
tracing = "*"
tracing-subscriber = "0.2.17"
yaml-rust = "0.4.3"
hashbrown = "0.11.*"
eui48 = "1.0.1"
byteorder = "1.3.4"
hdrhistogram = "7.2.0"
bytes = "0.4.12"
cornflakes-utils = { path = "../cornflakes-utils" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.*"
rand = "0.8.*"
rand_distr = "0.4.1"
perftools = {git = "https://github.com/demikernel/perftools", rev = "94031ae", optional = true}
itertools = "0.10.2"

[dev-dependencies]
libc = "0.2.81"
tracing-error = "*"
rand = "0.7.3"

[features]
default = ["mlx5"]
mlx5 = []
timers = []
profiler = ["perftools"]

