[package]
name = "cornflakes-libos"
version = "0.1.0"
authors = ["deeptir <deeptir@cs.stanford.edu>"]
edition = "2021"

[build-dependencies]
bindgen = "0.60.1" 
cc = "1.0.63"

[dependencies]
color-eyre = "0.5"
quanta = "0.10.1"
tracing = "*"
tracing-subscriber = "0.2.17"
yaml-rust = "0.4.3"
hashbrown = "0.11.*"
eui48 = "1.0.1"
byteorder = "1.3.4"
hdrhistogram = "7.2.0"
bytes = "1.0.1"
cornflakes-utils = { path = "../cornflakes-utils" }
protobuf = "3.0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.*"
rand = "0.8.*"
rand_distr = "0.4.1"
demikernel = {git = "https://github.com/deeptir18/demikernel", branch = "perftools_public", version = "1", features = ["profiler"], optional = true}
itertools = "0.10.2"
bitmaps = "3.2.0"
bumpalo = { git = "https://github.com/deeptir18/bumpalo", features = ["collections"] }
ahash = "0.7.6"
zero_copy_cache = {git = "https://github.com/vishwanath1306/zero_copy_cache", rev = "fa4da270cdc27f0e0cce5783f5d3744aeb06f7e5" }

[dev-dependencies]
libc = "0.2.81"
tracing-error = "*"
rand = "0.7.3"

[features]
default = []
profiler = ["demikernel"]

