[package]
name = "cornflakes-utils"
version = "0.1.0"
authors = ["deeptir <deeptir@cs.stanford.edu>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.5"
tracing = "*"
tracing-subscriber = "0.2.17"
tracing-error = "*"
yaml-rust = "0.4.3"
hashbrown = "0.11.*"
eui48 = "1.0.1"

