[package]
name = "dpdk-datapath"
version = "0.1.0"
authors = ["deeptir <deeptir@cs.stanford.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.55.1" 
cc = "1.0.63"

[dependencies]
color-eyre = "0.5"
tracing = "*"
eui48 = "1.0.1"
tracing-subscriber = "0.2.17"
cornflakes-libos = { path = "../cornflakes-libos" }
cornflakes-utils = { path = "../cornflakes-utils" }
perftools = {git = "https://github.com/demikernel/perftools", rev = "94031ae", optional = true}
yaml-rust = "0.4.3"
hashbrown = "0.11.*"
bytes = "0.4.12"
byteorder = "1.3.4"
affinity = "0.1.1"
hdrhistogram = "7.2.0"
ctrlc = "3.1.7"
structopt="0.2.16"
structopt-derive="0.2.16"

[features]
default = []
mlx5 = []
profiler = ["perftools"]

