[package]
name = "ds-echo"
version = "0.1.0"
authors = ["deeptir <deeptir@cs.stanford.edu>"]
edition = "2021"

[dependencies]
color-eyre = "0.5"
tracing = "*"
tracing-subscriber = "0.2.17"
structopt="0.2.16"
structopt-derive="0.2.16"
cornflakes-libos = { path = "../cornflakes-libos" }
dpdk-datapath = { path = "../dpdk-datapath", optional = true }
cornflakes-utils = { path = "../cornflakes-utils" }
cornflakes-codegen = { path = "../cornflakes-codegen" }
mlx5-datapath = { path = "../mlx5-datapath", optional = true }
linux-datapath = { path = "../linux-datapath" }
ctrlc = "3.1.7"
memmap = "0.7.0"
rand = "0.8.0"
byteorder = "1.3.4"
bytes = "1.0.1"
libc = "0.2.81"
capnp = { version = "0.13.6", features = ["unaligned"] }
flatbuffers = "0.7.0"
protobuf = "2.*.*"
affinity = "0.1.1"
cxx = "1.0"

[build-dependencies]
protoc-rust = "2.23.0"
capnpc = "0.13"
cornflakes-codegen = { path = "../cornflakes-codegen" }
cxx-build = "1.0"

[dev-dependencies]
libc = "0.2.81"
tracing-error = "*"
cornflakes-utils = { path = "../cornflakes-utils" }

[features]
default = []
mlx5 = ["dpdk-datapath/mlx5"]
profiler = ["cornflakes-libos/profiler"]

[[bin]]
name = "ds_echo_dpdk"
required-features = ["mlx5"]

[[bin]]
name = "ds_echo_mlx5"
required-features = ["mlx5"]

[[bin]]
name = "ds_echo_linux"
