[package]
name = "echo-server"
version = "0.1.0"
authors = ["deeptir <deeptir@cs.stanford.edu>"]
edition = "2018"

[dependencies]
color-eyre = "0.5"
tracing = "*"
tracing-subscriber = "*"
structopt="0.2.16"
structopt-derive="0.2.16"
cornflakes-libos = { path = "../cornflakes-libos" }

[features]
mlx5 = []

default = ["mlx5"]

