[package]
name = "echo-server"
version = "0.1.0"
authors = ["deeptir <deeptir@cs.stanford.edu>"]
edition = "2018"

[dependencies]
color-eyre = "0.5"
tracing = "*"
tracing-subscriber = "*"
structopt="0.2.16"
structopt-derive="0.2.16"
cornflakes-libos = { path = "../cornflakes-libos" }
cornflakes-utils = { path = "../cornflakes-utils" }
ctrlc = "3.1.7"
memmap = "0.7.0"
rand = "0.8.0"
byteorder = "1.3.4"
bytes = "1.0.1"
libc = "0.2.81"

[dev-dependencies]
libc = "0.2.81"
tracing-error = "*"

[features]
mlx5 = []

default = ["mlx5"]

