[package]
name = "kv-store"
version = "0.1.0"
authors = ["deeptir <deeptir@cs.stanford.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.5"
tracing = "*"
tracing-subscriber = "0.2.17"
structopt="0.2.16"
structopt-derive="0.2.16"
cornflakes-libos = { path = "../cornflakes-libos" }
cornflakes-utils = { path = "../cornflakes-utils" }
cornflakes-codegen = { path = "../cornflakes-codegen" }
ctrlc = "3.1.7"
memmap = "0.7.0"
byteorder = "1.3.4"
bytes = "1.0.1"
libc = "0.2.81"
capnp = { version = "0.13.6", features = ["unaligned"] }
flatbuffers = "0.7.0"
protobuf = "2.*.*"
hashbrown = "0.11.*"
affinity = "0.1.1"
cxx = "1.0"

[build-dependencies]
protoc-rust = "2.23.*"
capnpc = "0.13"
cornflakes-codegen = { path = "../cornflakes-codegen" }
cxx-build = "1.0"

[dev-dependencies]
libc = "0.2.81"
tracing-error = "*"
cornflakes-utils = { path = "../cornflakes-utils" }

[features]
mlx5 = []

default = ["mlx5"]


