[package]
name = "mlx5-datapath-c"
version = "0.1.0"
edition = "2021"

[lib]
name = "mlx5_datapath_c"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
tracing = "*"
tracing-subscriber = "0.2.17"
cornflakes-libos = { path = "../cornflakes-libos" }
cornflakes-utils = { path = "../cornflakes-utils" }
mlx5-datapath = { path = "../mlx5-datapath" }

[build-dependencies]
cbindgen = "0.23.0"


