[package]
name = "mlx5-datapath-c"
version = "0.1.0"
edition = "2021"

[lib]
name = "mlx5_datapath_c"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
tracing = "*"
tracing-subscriber = "0.2.17"
cornflakes-libos = { path = "../cornflakes-libos" }
cornflakes-utils = { path = "../cornflakes-utils" }
mlx5-datapath = { path = "../mlx5-datapath" }
cf-kv = { path = "../cf-kv/" }
bumpalo = { git = "https://github.com/deeptir18/bumpalo", features = ["collections"] }

[build-dependencies]
cbindgen = "0.23.0"


