[package]
name = "mlx5-datapath"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.5"
tracing = "*"
eui48 = "1.0.1"
tracing-subscriber = "0.2.17"
cornflakes-libos = { path = "../cornflakes-libos" }
cornflakes-utils = { path = "../cornflakes-utils" }
perftools = {git = "https://github.com/demikernel/perftools", rev = "94031ae"}
yaml-rust = "0.4.3"
hashbrown = "0.11.*"
bytes = "1.1.0"
byteorder = "1.3.4"

[build-dependencies]
bindgen = "0.55.1" 
cc = "1.0.63"

[features]
default = []
profiler = []
