[package]
name = "simple-echo"
authors = ["deeptir <deeptir@cs.stanford.edu>"]
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.5"
ctrlc = "3.1.7"
tracing = "*"
eui48 = "1.0.1"
tracing-subscriber = "0.2.17"
structopt="0.2.16"
structopt-derive="0.2.16"
cornflakes-libos = { path = "../cornflakes-libos" }
cornflakes-utils = { path = "../cornflakes-utils" }
linux-datapath = { path = "../linux-datapath" }
mlx5-datapath = { path = "../mlx5-datapath", optional = true }
dpdk-datapath = { path = "../dpdk-datapath", optional = true }
demikernel = {git = "https://github.com/deeptir18/demikernel", branch = "perftools_public", version = "1", features = ["profiler"], optional = true}
yaml-rust = "0.4.3"
hashbrown = "0.11.*"
bytes = "1.1.0"
byteorder = "1.3.4"
affinity = "0.1.2"

[features]
default = []
mlx5 = ["dpdk-datapath/mlx5", "mlx5-datapath", "dpdk-datapath", "mlx5-datapath/mlx5"]
profiler = ["cornflakes-libos/profiler", "demikernel", "mlx5-datapath/profiler", "dpdk-datapath/profiler"]

[[bin]]
name = "simple_echo_dpdk"
required-features = ["mlx5"]

[[bin]]
name = "simple_echo_mlx5"
required-features = ["mlx5"]

[[bin]]
name = "simple_echo_linux"
