[package]
name = "tapir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.5"
cornflakes-libos = { path = "../cornflakes-libos" }
cornflakes-utils = { path = "../cornflakes-utils" }
cornflakes-codegen = { path = "../cornflakes-codegen" }
protobuf = "3.0.3"
tracing = "*"
bitmaps = "3.2.0"
byteorder = "1.3.4"
bumpalo = { git = "https://github.com/deeptir18/bumpalo", features = ["collections"] }

[build-dependencies]
protobuf-codegen = "3.0.3"
cornflakes-codegen = { path = "../cornflakes-codegen" }

[dev-dependencies]
tracing-error = "*"
cornflakes-utils = { path = "../cornflakes-utils" }

[[bin]]
name = "tapir_cf"
