[package]
name = "tapir"
version = "0.1.0"
edition = "2021"

[lib]
name = "tapir"
path = "src/lib.rs"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.5"
cornflakes-libos = { path = "../cornflakes-libos" }
cornflakes-utils = { path = "../cornflakes-utils" }
cornflakes-codegen = { path = "../cornflakes-codegen" }
protobuf = "3.0.3"
tracing = "*"
bitmaps = "3.2.0"
byteorder = "1.3.4"
bumpalo = { git = "https://github.com/deeptir18/bumpalo", features = ["collections"] }
mlx5-datapath = { path = "../mlx5-datapath" }


[build-dependencies]
protobuf-codegen = "3.0.3"
cornflakes-codegen = { path = "../cornflakes-codegen" }
cbindgen = "0.23.0"

[dev-dependencies]
tracing-error = "*"
cornflakes-utils = { path = "../cornflakes-utils" }

